--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -10,7 +10,7 @@
   --xxlarge-spacing: 64px;
 
   --white-color: #ffffff;
-  --gray-chalk-color: #F8FAFC; /* canvas background */
+  --gray-chalk-color: #F4F7FA; /* canvas background */
   --gray-stone-color: #E6EAEF; /* borders */
   --gray-smoke-color: #A2ABB4; /* incidental text and icons */
   --gray-slate-color: #697482; /* secondary text */
@@ -62,7 +62,7 @@
   --gray-stone-color: #22272B; /* header and card backgrounds */
   --gray-smoke-color: #444D55; /* incidental text and icons */
   --gray-slate-color: #86909D; /* secondary text */
-  --gray-granite-color: #F8FAFC; /* primary text */
+  --gray-granite-color: #F4F7FA; /* primary text */
   --blue-jay-color: #6479D8;
   --dark-blue-jay-color: var(--blue-jay-color);
   --card-background-color: var(--gray-stone-color);
